...
   
   var body: some View {
      VStack {
         HStack {
            VStack {
               Stepper {
                  Text("Number of bins: \(nTiles[nTile])").accessibilityIdentifier("GraphDataViewNumBinsStepperText")
               } onIncrement: {
                  nTile += 1
                  if nTile >= nTiles.count { nTile = 0}
                  bins = nTiles[nTile]
               } onDecrement: {
                  nTile -= 1
                  if nTile < 0 { nTile = nTiles.count - 1 }
                  bins = nTiles[nTile]
               }
               .accessibilityIdentifier("GraphDataViewNumBinsStepper")
               Picker("Distance Measure", selection: $distanceType) {
                  Text("Path Length").tag(UndirectedGraph.DistanceType.PathLength).accessibilityIdentifier("GraphDataViewDistPickPathLength")
                  Text("Tagset Jaccard").tag(UndirectedGraph.DistanceType.TagsetJaccard).accessibilityIdentifier("GraphDataViewDistPickTagsetJaccard")
                  Text("Itemset Jaccard").tag(UndirectedGraph.DistanceType.ItemsetJaccard).accessibilityIdentifier("GraphDataViewDistPickItemsetJaccard")
               }
               .accessibilityIdentifier("GraphDataViewDistancePicker")
               .pickerStyle(.menu)
               Button(action: {newDistanceType()}) {
                  Text("Refresh")
               }
               .accessibilityIdentifier("GraphDataViewRefreshButton")
               HStack {
                  VStack {
                     Text("Low Bound")
                     Text("\(stats.lowBound)").accessibilityIdentifier("GraphDataViewLowBound")
                  }
                  VStack {
                     Text("High Bound")
                     Text("\(stats.highBound)").accessibilityIdentifier("GraphDataViewHighBound")
                  }
                  VStack {
                     Text("Count")
                     Text("\(stats.count)").accessibilityIdentifier("GraphDataViewCount")
                  }
                  VStack {
...
      .onAppear(perform: {prepState()})
#if os(macOS)        // bug: nav bar back button covered up by title
      .navigationBarBackButtonHidden(true)
      .toolbar {
         ToolbarItem(placement: .navigation) {
            Button(action: { dismiss() }) {
               Label("Back", systemImage: "arrow.left.circle")
            }
         }
      }
#endif
   }
   
...
var graph4Preview = makeGraph4Preview()
var boundGraph = Binding.constant(graph4Preview)
var boundBins = Binding.constant(Int(4))
var distType = Binding.constant(UndirectedGraph.DistanceType.PathLength)

#Preview {
   GraphDataView(graph: boundGraph, bins: boundBins, distanceType: distType)
}

