...
            HStack {
               Text("Maximum and average frequency was \(genData.maxFreq) and \(genData.avgFreq) respectively")
            }
            Spacer()
            HStack {
               Text("Editable parameter values for generating a collection of tagged items")
               Button("Accept", systemImage: "checkmark.circle", action: applyChanges)
                  .disabled(matching).labelStyle(.iconOnly)
               Button("Undo", systemImage: "arrow.uturn.backward.circle", action: populateState)
                  .disabled(matching).labelStyle(.iconOnly)
            }
            HStack {
               Toggle(isOn: $forceUnusedTags) {
...
               
            }
            HStack {
               NavigationLink("List of tags") {
                  TagListView(genData: $genData)
               }
               .accessibilityIdentifier("TagList")
               NavigationLink("List of items") {
                  ItemListView(genData: $genData)
               }
               .accessibilityIdentifier("ItemList")
               NavigationLink("Graph Data") {
                  GraphDataView(graph: $graph, bins: $bins, distanceType: $distanceType)
               }
               .accessibilityIdentifier("GraphDataView")
               NavigationLink("Graph Network") {
                  GraphNetworkView(network: $network)
               }
               .accessibilityIdentifier("GraphNetworkView")
            }
         }
         .padding(5)
         .onAppear(perform: populateState)
...
