...
   @State private var anchor: UnitPoint = .zero // .topLeading
   @State private var currentOffset: CGSize = .zero
   @State private var tapLocation: CGPoint = .zero
   @State private var tagInfo: TagInfo?
   @State private var factor: Double = minFactor //10.0     // Should match minFactor constant in FactorCalculation
   
   internal var canvasSpaceName = "GraphNetworkViewCanvas"
   private var dragGraph: some Gesture {
      DragGesture(coordinateSpace: .named(canvasSpaceName))
         .onChanged { value in currentOffset = value.translation}
         .onEnded { value in currentOffset = value.translation}
   }
   private var magnification: some Gesture {
...
                .popover(item: $tagInfo,
                         attachmentAnchor: PopoverAttachmentAnchor.point(UnitPoint(x: tapLocation.x/geometry.size.width, y: tapLocation.y/geometry.size.height)),
                         content: { info in
                            VStack {
                               HStack {
                                  Text("\(info.tag.name) at ")
                                  Text("\(info.nodeEntry?.xpos ?? -1)").accessibilityIdentifier("GraphNetworkViewPopupTagInfoXpos")
                                  Text(",")
                                  Text("\(info.nodeEntry?.ypos ?? -1)").accessibilityIdentifier("GraphNetworkViewPopupTagInfoYpos")
                               }
                               Text("Tap was (\(info.tapPostion.x),\(info.tapPostion.y)) adjusted to (\(info.adjustedTap.x), \(info.adjustedTap.y))")
                                  .accessibilityIdentifier("GraphNetworkViewPopupTapInfo")
                               Text(" and Search was (\(info.srchPosition.x), \(info.srchPosition.y))")
                                  .accessibilityIdentifier("GraphNetworkViewPopupSearchArgs")
                               Text("There were \(info.matches) matches.  The screen factor was \(info.screenFactor)")
...
